# 005-ANNA-Specialized-Architecture-for-Approximate-Nearest-Neighbor-Search

./: CMakeLists.txt  README  citation.txt
configs/: HBM_ANNAs.ini  HMC_4GB_4Lx16.ini
dramsim3/src/: dramsim3.h
multi_anna/: cluster_codebook_processing_module.hpp  config.cpp  config.hpp  encoded_vector_fetch_module.hpp  memory_reader.hpp  memory_switch.hpp  multi_anna.hpp  multi_memory_interface.hpp  query.hpp  similarity_computation_module.hpp  test.cpp  utils.hpp
